<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencescreen" >

    <PreferenceCategory android:title="@string/feedbacks" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isSoundEnabled"
            android:summary="@string/enable_or_disable_sound_effect"
            android:title="@string/sound_effect" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isVibrationEnabled"
            android:summary="@string/enable_or_disable_vibration_feedbacks"
            android:title="@string/vibration" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/database" >
        <Preference
            android:key="clear_all_data"
            android:title="@string/click_to_delete_all_data" />
    </PreferenceCategory>

</PreferenceScreen>