<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_for_menu" >

    <TextView
        android:id="@+id/actionBarTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abs__action_bar_default_height"
        android:background="@color/title_bar_color"
        android:gravity="center"
        android:padding="@dimen/abs__action_bar_subtitle_bottom_margin"
        android:text="@string/app_name"
        android:textColor="@color/result_text"
        android:textSize="@dimen/abs__action_bar_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBarTextView"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:paddingTop="5dp" >

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/date_array" />

        <RadioGroup
            android:id="@+id/foodTimeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/breakFastRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/break_fast" />

            <RadioButton
                android:id="@+id/lunchRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch" />

            <RadioButton
                android:id="@+id/dinnerRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_delete" />

        <Button
            android:id="@+id/csvButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csv" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_action_settings" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_social_forward" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/confirmCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLinearLayout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/default_margin"
        android:checked="true"
        android:text="@string/confirm_each_qr" />

</RelativeLayout>